--- a/package.json
+++ b/package.json
@@ -18,7 +18,16 @@
   "dependencies": {
     "axios": "^1.11.0",
     "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nobel-sk/paystack-proxy.git"
+  },
+  "bugs": {
+    "url": "https://github.com/Nobel-sk/paystack-proxy/issues"
+  },
+  "homepage": "https://github.com/Nobel-sk/paystack-proxy#readme"
 }
