--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 PAYSTACK_SECRET_KEY=sk_test_6a1d20e8481b9aadb23a0f993308cb6a826fe6d6
+BASE_URL=https://paystack-proxy.onrender.com
+FIREBASE_RTDB_URL=https://family-grocery-d3010-default-rtdb.firebaseio.com
